--- a/course-links.qmd
+++ b/course-links.qmd
@@ -3,11 +3,9 @@ title: "Useful links"
 ---
 
 +----------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Course GitHub organization | 🔗 on [GitHub](https://github.com/sta199-s24)                                                                                                                                                                                                         |
+| Course GitHub organization | 🔗 on [GitHub](https://github.com/INFO-511-F24)                                                                                                                                                                                                       |
 +----------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | Google Collab              | 🔗 <https://colab.research.google.com/>                                                                                                                                                                                                               |
-+----------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-| Office hours               | 🔗 on [Google Sheets](https://docs.google.com/spreadsheets/d/1Mw69d1Ro-_G1Y8x7FH1wqCI04bxLpVOJ7gp8QSFGJBU/edit#gid=0)                                                                                                                                 |
 +----------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | Slack                      | 🔗 [info511fall2024](https://info511fall2024.slack.com)                                                                                                                                                                                               |
 +----------------------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
