--- a/slides/25-final-review.qmd
+++ b/slides/25-final-review.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Exam 2 review"
+title: "Final review"
 subtitle: "Lecture 25"
 format:
   revealjs: default
@@ -17,15 +17,7 @@ Same as Exam 1!
 
 # Exam Review
 
-## Review: `exam-2-review` {.smaller}
-
-::: appex
--   Go back to your project called `exam`.
--   If there are any uncommitted files, commit them, and push.
--   Then pull and work on `exam-2-review.qmd`.
-:::
-
-## Recap of Exam Review {.smaller}
+## Concepts covered {.smaller}
 
 ::: incremental
 -   A hypothesis test is a statistical technique used to evaluate competing claims (null and alternative hypotheses) using data.
@@ -37,11 +29,4 @@ Same as Exam 1!
 -   Vector and Matrix Transpose: Writing down the transpose of vectors and matrices.
 -   Matrix Dimensions: Determining the dimensions of matrices and the validity of matrix products.
 -   Matrix Multiplication: Performing matrix multiplication and understanding the resulting matrix dimensions.
-:::
-
-# Questions
-
-## Questions {.smaller}
-
-::: incremental
 :::
