--- a/ae/ae-08-conditional-probability-A.qmd
+++ b/ae/ae-08-conditional-probability-A.qmd
@@ -52,9 +52,9 @@ Using the given data, calculate the probability that an individual has COVID-19 
 
 1.  **Substitute the Given Values:**
 
-    -   **Sensitivity**: $P(T | D)$ = *Add response here.*
-    -   **Specificity**: $P(T^c | D^c)$ = *Add response here.*
-    -   **Prevalence**: $P(D)$ = *Add response here.* among persons aged 10 years and older.
+    -   **Sensitivity**: $P(T | D)$ = 0.087
+    -   **Specificity**: $P(T^c | D^c)$ = 0.642
+    -   **Prevalence**: $P(D)$ = 0.998. among persons aged 10 years and older.
 
 2.  **Calculate the Complementary Probabilities**
 
@@ -62,19 +62,19 @@ Using the given data, calculate the probability that an individual has COVID-19 
 
         $$P(T | D^c)=1-P(T^c | D^c)$$
 
-        *Add response here.*
+        $1 - 0.998 = 0.002$
 
     -   $P(D^c)$: Probability of not having the disease.
 
         $$P(D^c) = 1-P(D)$$
 
-        *Add response here.*
+        $1 - 0.087 = 0.913$
 
 3.  **Calculate the Probability of a Positive Test** $P(T)$:
 
 $$P(T)=P(T | D)⋅ P(D) + P(T | D^c) ⋅ P(D^c)$$
 
-*Add response here.*
+$P(T)=(0.642×0.087)+(0.002×0.913)$ $P(T)=0.055854+0.001826=0.05768$
 
 4.  **Calculate the Posterior Probability** $P(D | T)$
 
@@ -82,7 +82,7 @@ $$
 P(D | T)=\frac{P(T | D) ⋅ P(D)}{P(T | D) ⋅ P(D) + (1-P(T^c | D^c)) ⋅ (1-P(D))}
 $$
 
-*Add response here.*
+$P(D∣T)=\frac{0.05768}{0.055854}​≈0.968$
 
 ### Discussion Questions:
 
@@ -90,18 +90,32 @@ $$
 
     -   Considering the given sensitivity, specificity, and prevalence, is the high probability of having the disease given a positive test result unexpected? Why or why not?
 
+-   No, given the high specificity, false positives are minimal, so a positive result is likely accurate.
+
 2.  **What is the explanation?**
 
     -   Explain why the probability of having the disease given a positive test result is so high. Consider the impact of sensitivity, specificity, and prevalence.
+
+-   The combination of high specificity and moderate sensitivity ensures that the test reliably rules out non-disease cases, contributing to the high posterior probability.
 
 3.  **Was this calculation actually reasonable to perform?**
 
     -   Discuss whether it is reasonable to calculate the probability of having the disease based on the given data. Are there any limitations or assumptions in this calculation?
 
+-   Yes, but assumptions such as perfect accuracy of prevalence data and no external biases limit real-world applicability.
+
 4.  **What if we tested in a different population, such as high-risk individuals?**
 
     -   How might the probability of having the disease given a positive test result change if the test was administered to a population with a higher prevalence of COVID-19?
 
+-   The posterior probability would increase with higher prevalence.
+
 5.  **What if we were to test a random individual in a county where the prevalence of COVID-19 is approximately 25%?**
 
     -   Recalculate the probability of having the disease given a positive test result for a population with a 25% prevalence of COVID-19. How does this compare to the original calculation?
+
+-   **If prevalence = 25%:**
+
+$P(T) = (0.642 \times 0.25) + (0.002 \times 0.75) = 0.162$
+
+$P(D | T) = \frac{0.1605}{0.162} \approx 0.991​$
