--- a/ae/ae-09-hypothesis-testing-A.qmd
+++ b/ae/ae-09-hypothesis-testing-A.qmd
@@ -13,7 +13,7 @@ execute:
   error: false
 ---
 
-An article in the The Tucson Citizen-Times published in the summer of 2020 claims that the average price per guest (ppg) for properties in Tucson is \$95 on Airbnb.
+An article in the The Tucson Citizen-Times published in the summer of 2020 claims that the average price per guest (ppg) for properties in Tucson is \$100 on Airbnb.
 To evaluate their claim we will use a dataset on 50 randomly selected Asheville Airbnb listings in July 2024.
 These data can be found in `data/tucson.csv`.
 
@@ -27,7 +27,7 @@ import numpy as np
 import pandas as pd
 import matplotlib.pyplot as plt
 import seaborn as sns
-from scipy import stats
+from scipy.stats import ttest_1samp
 ```
 
 And then the data.
@@ -43,14 +43,14 @@ tucson = pd.read_csv("data/tucson.csv")
 
 -   Write out the correct null and alternative hypothesis. Do this in both words *and* in proper notation.
 
-Null Hypothesis $H_0$: The population mean is 95.
+Null Hypothesis $H_0$: The population mean is 100.
 
-Alternative Hypothesis $H_1$: The population mean is not 95.
+Alternative Hypothesis $H_1$: The population mean is not 100.
 In proper notation:
 
-$H_0=95$
+$H_0=100$
 
-$H_1\ne95$
+$H_1\ne100$
 
 # Observed data
 
@@ -86,7 +86,8 @@ np.random.seed(4321)
 ```{python}
 #| label: null-dist-generate
 
-null_dist = np.random.normal(loc=95, scale=10, size=100)
+null_dist = np.random.normal(loc=100, scale=tucson['ppg'].std(), size=1000)
+
 ```
 
 -   Take a look at `null_dist`. What does each element in this distribution represent?
@@ -101,7 +102,7 @@ null_dist
 
 -   **Question:** Before you visualize the distribution of `null_dist` -- at what value would you expect this distribution to be centered? Why?
 
-At 75, since we created this distribution assuming $\mu=95$
+At 100, since we created this distribution assuming $\mu=100$
 
 -   Create an appropriate visualization for your null distribution. Does the center of the distribution match what you guessed in the previous question?
 
@@ -145,9 +146,12 @@ The probability of the observed sample statistic, or something more extreme in t
 
 ```{python}
 #| label: p-value-visualize
+point_estimate = tucson['ppg'].mean()
 
-p_value = (null_dist >= sample_mean).mean()
-print(f"P-value = {p_value}")
+# Calculate two-sided p-value
+p_value_two_sided = 2 * min((null_dist >= point_estimate).mean(), 
+                            (null_dist <= point_estimate).mean())
+print(f"Two-sided P-value = {p_value_two_sided}")
 
 # Visualize the p-value
 sns.histplot(null_dist, kde=True)
@@ -161,18 +165,18 @@ plt.show()
 
 -   **Your turn:** What is the p-value?
 
-$\text{P-value}=0.02$
+$\text{P-value}=0.862$
 
 # Conclusion
 
 -   What is the conclusion of the hypothesis test based on the p-value you calculated? Make sure to frame it in context of the data and the research question. Use a significance level of 5% to make your conclusion.
 
-Since the p-value is smaller than the significance level, we reject the null hypothesis.
-The data provide convincing evidence that the average price per guest of properties on Airbnb in Tucson is different than \$95.
+Since the p-value is larger than the significance level, we cannot reject the null hypothesis.
+The data provide convincing evidence that the average price per guest of properties on Airbnb in Tucson is different than \$100.
 
 -   Interpret the p-value in context of the data and the research question.
 
-If in fact the true average price per guest of properties on Airbnb in Tucson is \$95, the probability of observing a random sample of 50 Tucson Airbnb listings where the average price per guest is \$116.23 or higher or \$73.77 or lower is 0.02.
+If in fact the true average price per guest of properties on Airbnb in Tucson is \$100, the probability of observing a random sample of 50 Tucson Airbnb listings where the average price per guest is \$116.23 or higher or \$73.77 or lower is 0.862.
 
 # Get real...
 
@@ -185,7 +189,7 @@ Change the number of resamples to a higher number, somewhere \~10,000 replicates
 ```{python}
 #| label: hypothesis-test
 
-null_dist_large = np.random.normal(loc=95, scale=10, size=10000)
+null_dist_large = np.random.normal(loc=100, scale=tucson['ppg'].std(), size=10000)
 
 null_dist_large = np.array(null_dist_large)
 
