--- a/ae/ae-10-modeling-fish-A.qmd
+++ b/ae/ae-10-modeling-fish-A.qmd
@@ -68,9 +68,7 @@ plt.show()
 
     *Start from the bottom and go up Identify the first and last point and draw a line through most the others.*
 
-    -   Now, let Python draw the line for you.
-        Refer to the documentation at <https://seaborn.pydata.org/generated/seaborn.lmplot.html>.
-        Specifically, refer to the `method` section.
+    -   Now, let Python draw the line for you. Refer to the documentation at <https://seaborn.pydata.org/generated/seaborn.lmplot.html>. Specifically, refer to the `method` section.
 
     ```{python}
     #| label: plot-hw-lm
@@ -200,7 +198,7 @@ plt.show()
 
 # Fitting other models
 
--   We can fit more models than just a straight line. Change the following code below to read `lowess=True`. What is different from the plot created before?
+-   We can fit more models than just a straight line. Change the `sns.regplot()` code you previously used to include `lowess=True`. What is different from the plot created before?
 
 ```{python}
 #| label: plot-hw-loess
