--- a/labs/lab-5.qmd
+++ b/labs/lab-5.qmd
@@ -9,6 +9,7 @@ execute:
 
 ::: callout-important
 This is a *Team* Lab, meaning you can and should work with your project team on it.
+Each member will need to submit the assignment individually, but all team member names should be represented as authors.
 :::
 
 ```{python}
@@ -51,7 +52,6 @@ Hopefully that's everyone, but if someone doesn't contribute during the lab sess
 If you have 4 members in your team, you can delete the line for the 5th team member.
 Then, this team member should render the document and commit and push the changes.
 All others should **not** touch the document at this stage.
-
 
 ``` markdown
 # Lab 5 - Probability and Simpson’s Paradox
@@ -142,7 +142,7 @@ You will be investigating data for the months June, July, September, and Novembe
 Below is a list of variables and their definitions:
 
 | Variable  | Definition                                                                     |
-|------------------|------------------------------------------------------|
+|-----------|--------------------------------------------------------------------------------|
 | `season`  | Numerical representation of Spring (2), Summer (3), and Fall (4)               |
 | `year`    | Numerical representation of 2011 (0) or 2012 (1)                               |
 | `month`   | Month in which data were collected                                             |
